Insert css for the project

--- a/app/templates/cards.hbs
+++ b/app/templates/cards.hbs
@@ -1,22 +1,21 @@
-<article class="products-listing">
+<div>
     {{#each this.model as |card|}}
-    <img src={{card.image}} alt="Ocotber products">
-    <div class="details">
-        <h3>{{card.title}}</h3>
-        <div class="details-date">
-            <span>{{card.date}}</span>
-        </div>
-        <div class="details-rate">
-            <span>{{card.rate}} &#183; {{card.time}}</span>
-        </div>
-        <div class="details-amount">
-            <span>&#8364; {{card.amount}}</span>
-        </div>
-        <div class="details-grade">
-            <ul>
-                <li>{{card.grade}}</li>
-            </ul>
-        </div>
-    </div>
+        <article class="listing">
+            <div class="details">
+                <h3>{{card.title}}</h3>
+                <div class="detail date">
+                    <span>{{card.date}}</span>
+                </div>
+                <div class="detail rate">
+                    <span>{{card.rate}} &#183; {{card.time}}</span>
+                </div>
+                <div class="detail amount">
+                    <span>&#8364;{{card.amount}}</span>
+                </div>
+                <div class="detail grade">
+                    <span>{{card.grade}}</span>
+                </div>
+            </div>
+        </article>
     {{/each}}
-</article>
+</div>
