--- a/app/templates/cards.hbs
+++ b/app/templates/cards.hbs
@@ -1,6 +1,7 @@
 <div>
     {{#each this.model as |card|}}
         <article class="listing">
+            <img src={{card.image}} alt="">
             <div class="details">
                 <h3>{{card.title}}</h3>
                 <div class="detail date">
